# little-living-apps

./: .dockerignore  .env.example  .gitignore  .mise.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEFECTS.md  DESIGN.md  Dockerfile  LICENSE  MIGRATION-CODEX.md  MIGRATION.md  README.md  ROADMAP.md  RUNBOOK.md  SPEC.md  VALIDATION_PLAN.md  bootstrap.sh  clippy.toml  compose.yaml  coverage.json  deny.toml  package-lock.json  package.json  rustfmt.toml  tsconfig.build.json  tsconfig.json
.github/workflows/: ci.yml
deploy/: Caddyfile  build-on-box.sh  cutover.sh  deploy-rs.sh  discover.sh  lila-app.service  lila-app@.service  lila-manager.service  lila-manager@.service  lila-rs-manager.service  lila-rs.env.example  lila-rs@.service
design/systems/: INDEX.md  PROVENANCE
design/systems/agentic/: USAGE.md  components.manifest.json  design-tokens.json  manifest.json
design/systems/airbnb/: USAGE.md  components.manifest.json  design-tokens.json  manifest.json
design/systems/airtable/: USAGE.md  components.html  components.manifest.json  design-tokens.json  manifest.json
design/systems/ant/: USAGE.md  components.manifest.json  design-tokens.json  manifest.json
design/systems/apple/: USAGE.md  components.manifest.json  design-tokens.json  manifest.json
design/systems/application/: USAGE.md  components.manifest.json  design-tokens.json  manifest.json
design/systems/arc/: DESIGN.md  USAGE.md  components.manifest.json  design-tokens.json  manifest.json
design/systems/artistic/: USAGE.md  components.manifest.json  design-tokens.json  manifest.json
design/systems/atelier-zero/: USAGE.md  components.manifest.json  design-tokens.json  manifest.json
design/systems/bento/: USAGE.md  components.manifest.json  manifest.json
design/systems/binance/: USAGE.md  components.manifest.json  design-tokens.json  manifest.json
design/systems/bmw/: USAGE.md  components.manifest.json  design-tokens.json  manifest.json
design/systems/bmw-m/: USAGE.md  components.manifest.json  design-tokens.json  manifest.json
design/systems/bold/: USAGE.md  components.manifest.json  design-tokens.json  manifest.json
design/systems/brutalism/: USAGE.md  design-tokens.json  (+2 more)
docker/: Caddyfile
docs/: hero.webm  rust-agent.md
docs/diagrams/: loop.html  render.mjs
eval/: DESIGN.md  README.md  baseline.json  checks.ts  fixture.ts  graders.test.ts  harness.ts  judge.ts  run.ts  scenarios.ts  types.ts  workers.ts
eval/fixtures/: setup-rails.sh
provision/: AGENTS.md  bootstrap.sh  provision.sh
provision/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: check-complexity.sh  coverage.sh
skills/design-system/: SKILL.md
skills/setup-living-app/: REFERENCE.md  SKILL.md
src/: app.ts  backend_cli.rs  cli.rs  codex.ts  config.rs  config.ts  design.rs  handler.ts  index.ts  lib.rs  logger.ts  logging.rs  main.rs  sessions.ts  sprite.ts  stack.rs  telegram.ts  webhook.ts
src/commands/: config_check.rs  design.rs  doctor.rs  memory_cmd.rs  mod.rs  run.rs  stack.rs  status.rs
src/eval/: checks.rs  fake_telegram.rs  fixture.rs  harness.rs  judge.rs  mod.rs  report.rs  run.rs  scenarios.rs  trace_read.rs  transcript.rs
src/inspector/: appfiles.ts  html.rs  html.ts  mod.rs  server.rs  server.ts
src/manager/: anthropic.ts  app.rs  backend.rs  backend.ts  claude.rs  codex.rs  driver.rs  driver.ts  fake_backend.rs  manager.ts  managerCodex.ts  mod.rs  prompt.rs  prompt.ts  real.rs  settings.rs
src/memory/: block.rs  block.ts  fts.rs  fts.ts  git.rs  git.ts  memfs.rs  memfs.ts  mod.rs
src/runtime/: event.rs  eventQueue.ts  hold.ts  loop.ts  mod.rs  queue.rs  snapshot.rs  snapshot.ts  telemetry.rs  telemetry.ts  trace.rs
src/transport/: deliver.rs  deliver.ts  mod.rs  poller.rs  poller.ts  telegram.rs  telegram.ts  webhook.ts
src/workers/: agents.rs  claude_runner.rs  codex_runner.rs  fake_runner.rs  mod.rs  orchestrator.rs  orchestrator.ts  protocol.rs  protocol.ts  real.rs  registry.ts  runner.rs  runner.ts  summarize.ts  types.ts
stacks/: README.md
stacks/node-react/: manager.md  scaffold.sh  stack.toml  worker.md
stacks/rails-pwa/: design.md  manager.md  scaffold.sh  stack.toml  worker.md
test/: codex.test.ts  config.test.ts  driver.test.ts  e2e.test.ts  helpers.ts  inspector.test.ts  manager.test.ts  mcp.test.ts  memory.test.ts  poller.test.ts  protocol.test.ts  runtime.test.ts  sprite.test.ts  telemetry.test.ts  units.test.ts  workers.test.ts
test/fakes/: fakeAnthropic.ts  fakeCodex.ts  fakeManager.ts  fakeTelegram.ts
tests/: agent_loop.rs  cli_commands.rs  eval_graders.rs  eval_harness.rs  eval_rails.rs  eval_trace.rs  inspector.rs  live_codex.rs  mcp_server.rs
tests/common/: mod.rs
(+564 files in other folders)
