[package]
name = "lila-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
claude-agent-sdk-rust = "1.0.0"
codex-client-sdk = "0.107.0"
futures = "0.3.32"
regex = "1.11.1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "multipart", "stream", "http2", "charset", "rustls"] }
rmcp = { version = "1.7.0", features = ["server", "transport-streamable-http-server"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.3", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
reqwest = "0.13.4"
rmcp = { version = "1.7.0", features = ["client", "transport-streamable-http-client", "reqwest", "transport-streamable-http-client-reqwest"] }

[lib]
name = "lila"
path = "src/lib.rs"

[[bin]]
name = "lila"
path = "src/main.rs"

# The eval runner: boots the compiled `lila` binary against the behavior suite (see src/eval/).
[[bin]]
name = "lila-eval"
path = "src/bin/lila_eval.rs"

[features]
# Enables an in-process scripted FakeBackend so the compiled binary can run a full agent loop in
# integration tests without a real codex/claude subscription. Off in production builds.
testing = []

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

# Vendored codex-client-sdk with one upstream gap fixed: the 0.107 `PatchApplyStatus` enum lacks the
# `in_progress` variant that codex CLI ≥ ~0.141 emits for in-flight file patches, which otherwise
# fails EVERY codex worker run (and prod) with `unknown variant 'in_progress'`. The patch adds the
# variant; see vendor/codex-client-sdk/src/items.rs. Drop this when a CLI-matched SDK ships on crates.io.
[patch.crates-io]
codex-client-sdk = { path = "vendor/codex-client-sdk" }
