[package]
name = "lila-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Telegram-driven manager agent that delegates to ephemeral workers and rides a Codex or Claude subscription"
repository = "https://github.com/zakkl13/little-living-apps"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
claude-agent-sdk-rust = "1.0.0"
# In-tree fork of the codex-client-sdk crate (its lib is still named `codex`, so consumers use
# `use codex::...` unchanged). See vendor/lila-codex/NOTICE for why we fork.
lila-codex = { path = "vendor/lila-codex" }
futures = "0.3.32"
regex = "1.11.1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "multipart", "stream", "http2", "charset", "rustls"] }
rmcp = { version = "1.7.0", features = ["server", "transport-streamable-http-server"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
toml = { version = "1", default-features = false, features = ["parse", "serde", "std"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.3", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
reqwest = "0.13.4"
rmcp = { version = "1.7.0", features = ["client", "transport-streamable-http-client", "reqwest", "transport-streamable-http-client-reqwest"] }

[lib]
name = "lila"
path = "src/lib.rs"

[[bin]]
name = "lila"
path = "src/main.rs"

# The eval runner: boots the compiled `lila` binary against the behavior suite (see src/eval/).
[[bin]]
name = "lila-eval"
path = "src/bin/lila_eval.rs"

[features]
# Enables an in-process scripted FakeBackend so the compiled binary can run a full agent loop in
# integration tests without a real codex/claude subscription. Off in production builds.
testing = []

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

# Keep target/ small. Dependencies dominate target/debug/deps (~9G with full debuginfo) and we never
# step into them, so build them with no debuginfo. Our own crate keeps line tables — enough for
# readable backtraces (file:line) without the bulk of full DWARF. Applies to test builds too (the
# test profile inherits dev).
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false
